--- a/tox.ini
+++ b/tox.ini
@@ -39,38 +39,7 @@ description =
     Common environment.
 # yes, we do want to skip the installation of the package, because we do that ourself
 skip_install = True
-allowlist_externals =
-    sh
-    ldd
-    du
-    file
-    cp
-    mv
-    rm
-    ls
-    chmod
-    mkdir
-    find
-    zip
-    sort
-    echo
-    curl
-    which
-    sphinx-build
-    coverage
-    test_ab_examples.sh
-    test_setup.sh
-    test_cli_0.sh
-    test_cli_1.sh
-    test_cli_2.sh
-    test_cli_3.sh
-    run.sh
-    test_host1.sh
-    test_host2.sh
-    test_prepare_host.sh
-    test_setup1.sh
-    test_setup2.sh
-    test_xbr_network.sh
+allowlist_externals = *
 setenv =
     PYTHONPATH                  = {toxinidir}
     CB_FULLTESTS                = {env:CB_FULLTESTS:1}
@@ -172,8 +141,7 @@ commands =
 description =
     Generate docs using Sphinx.
 skip_install = True
-allowlist_externals =
-    sphinx-build
+allowlist_externals = *
 commands =
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
