--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,9 @@ setenv =
     MAILGUN_KEY                 = "key-00000000000000000000000000000000"
     MAILGUN_URL                 = "https://api.mailgun.net/v3/mailing.crossbar.io/messages"
     CROSSBAR_FABRIC_URL         = {env:CROSSBAR_FABRIC_URL:ws://localhost:9000/ws}
-    CROSSBAR_FABRIC_SUPERUSER   = .crossbar/default.pub
+
+    # use superuser key from node directory (NOT recommended in prod):
+    CROSSBAR_FABRIC_SUPERUSER   = {toxinidir}/test/cfc/.crossbar/default.pub
 passenv =
     # https://packaging.python.org/guides/supporting-windows-using-appveyor/#testing-with-tox
     DISTUTILS_USE_SDK
