--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -12,10 +12,10 @@ cookiecutter>=2.1.1
 cryptography>=39.0.0
 docker>=6.0.1
 # required for python 3.11+ https://github.com/ethereum/eth-abi/pull/194
-git+https://github.com/ethereum/eth-abi.git@master#v4.0.0
+git+https://github.com/ethereum/eth-abi.git@v4.0.0-beta.2#egg=eth-abi
 # required for python 3.11+ (https://github.com/ethereum/eth-account/pull/212)
-git+https://github.com/ethereum/eth-account.git#v0.8.0
-git+https://github.com/ethereum/eth-typing.git#v3.2.0
+git+https://github.com/ethereum/eth-account.git@v0.8.0#egg=eth-account
+git+https://github.com/ethereum/eth-typing.git@v3.2.0#egg=eth-typing
 flask>=2.2.2
 git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
 git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
@@ -79,7 +79,7 @@ urllib3>=1.26.14,<1.27
 validate-email>=1.3
 watchdog>=2.2.1
 # web3 5.31.3 depends on eth-abi<3.0.0 and >=2.2.0
-git+https://github.com/ethereum/web3.py.git#v6.0.0-beta.9
+git+https://github.com/ethereum/web3.py.git@v6.0.0-beta.9#egg=web3
 werkzeug>=2.2.2
 wsaccel>=0.6.4; platform_python_implementation=='CPython'
 xbr>=21.2.1
