--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -79,7 +79,7 @@ urllib3>=1.26.14,<1.27
 validate-email>=1.3
 watchdog>=2.2.1
 # web3 5.31.3 depends on eth-abi<3.0.0 and >=2.2.0
-git+https://github.com/ethereum/web3.py.git@v6.0.0-beta.9#egg=web3
+git+https://github.com/ethereum/web3.py.git@v6.0.0-beta.9#egg=web3[ipfs]
 werkzeug>=2.2.2
 wsaccel>=0.6.4; platform_python_implementation=='CPython'
 xbr>=21.2.1
