--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -14,7 +14,8 @@ docker>=6.0.1
 # required for python 3.11+ https://github.com/ethereum/eth-abi/pull/194
 git+https://github.com/ethereum/eth-abi.git@v4.0.0-beta.2#egg=eth-abi
 # required for python 3.11+ (https://github.com/ethereum/eth-account/pull/212)
-git+https://github.com/ethereum/eth-account.git@v0.8.0#egg=eth-account
+# git+https://github.com/ethereum/eth-account.git@v0.8.0#egg=eth-account
+git+https://github.com/crossbario/eth-account.git@fix-215#egg=eth-account
 git+https://github.com/ethereum/eth-typing.git@v3.2.0#egg=eth-typing
 flask>=2.2.2
 git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
