--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -1,10 +1,10 @@
 attrs>=22.2.0
-git+https://github.com/crossbario/autobahn-python.git@master#egg=autobahn[twisted,encryption,compress,serialization,scram,xbr]
+autobahn[twisted,encryption,compress,serialization,scram,xbr] @ git+https://github.com/crossbario/autobahn-python.git@master#egg=autobahn
 base58>=2.1.1
 bcrypt>=4.0.1
 bitstring>=4.0.1
 cbor2>=5.4.6
-git+https://github.com/crossbario/cfxdb.git@master#egg=cfxdb
+cfxdb @ git+https://github.com/crossbario/cfxdb.git@master#egg=cfxdb
 click>=8.1.3
 colorama>=0.4.6
 constantly>=15.1.0
@@ -12,14 +12,13 @@ cookiecutter>=2.1.1
 cryptography>=39.0.0
 docker>=6.0.1
 # required for python 3.11+ https://github.com/ethereum/eth-abi/pull/194
-git+https://github.com/ethereum/eth-abi.git@v4.0.0-beta.2#egg=eth-abi
+eth-abi @ git+https://github.com/ethereum/eth-abi.git@v4.0.0-beta.2#egg=eth-abi
 # required for python 3.11+ (https://github.com/ethereum/eth-account/pull/212)
-# git+https://github.com/ethereum/eth-account.git@v0.8.0#egg=eth-account
-git+https://github.com/crossbario/eth-account.git@fix-215#egg=eth-account
-git+https://github.com/ethereum/eth-typing.git@v3.2.0#egg=eth-typing
+eth-account @ git+https://github.com/crossbario/eth-account.git@fix-215#egg=eth-account
+eth-typing @ git+https://github.com/ethereum/eth-typing.git@v3.2.0#egg=eth-typing
 flask>=2.2.2
-git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
-git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
+py-cid @ git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
+py-multihash @ git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
 # FIXME: twisted/http2 needs <4 => h2>=4.1.0
 h2>=3.2.0,<4.0.0
 hexbytes>=0.3.0
@@ -72,7 +71,7 @@ treq>=22.2.0
 twisted[tls,conch,http2,osx_platform]>=22.10.0; sys_platform == 'darwin'
 twisted[tls,conch,http2,windows_platform]>=22.10.0; sys_platform == 'win32'
 twisted[tls,conch,http2]>=22.10.0; sys_platform != 'darwin' and sys_platform != 'win32'
-git+https://github.com/crossbario/txaio.git@master#egg=txaio
+txaio @ git+https://github.com/crossbario/txaio.git@master#egg=txaio
 txtorcon>=22.0.0
 u-msgpack-python>=2.7.2
 ujson>=5.7.0
@@ -80,9 +79,9 @@ urllib3>=1.26.14,<1.27
 validate-email>=1.3
 watchdog>=2.2.1
 # web3 5.31.3 depends on eth-abi<3.0.0 and >=2.2.0
-git+https://github.com/ethereum/web3.py.git@v6.0.0-beta.9#egg=web3[ipfs]
+web3[ipfs] @ git+https://github.com/ethereum/web3.py.git@v6.0.0-beta.9#egg=web3
 werkzeug>=2.2.2
 wsaccel>=0.6.4; platform_python_implementation=='CPython'
 xbr>=21.2.1
-git+https://github.com/crossbario/zlmdb.git@master#egg=zlmdb
+zlmdb @ git+https://github.com/crossbario/zlmdb.git@master#egg=zlmdb
 zope.interface>=5.5.2
