--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -11,14 +11,12 @@ constantly>=15.1.0
 cookiecutter>=2.1.1
 cryptography>=39.0.0
 docker>=6.0.1
-# required for python 3.11+ https://github.com/ethereum/eth-abi/pull/194
-eth-abi @ git+https://github.com/ethereum/eth-abi.git@v4.0.0-beta.2#egg=eth-abi
-# required for python 3.11+ (https://github.com/ethereum/eth-account/pull/212)
-eth-account @ git+https://github.com/crossbario/eth-account.git@fix-215#egg=eth-account
-eth-typing @ git+https://github.com/ethereum/eth-typing.git@v3.2.0#egg=eth-typing
+eth-abi>=5.0.0
+eth-account>=0.11.0
+eth-typing>=4.0.0
 flask>=2.2.2
 py-cid @ git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
-py-multihash @ git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
+py-multihash>=2.0.1
 # FIXME: twisted/http2 needs <4 => h2>=4.1.0
 h2>=3.2.0,<4.0.0
 hexbytes>=0.3.0
@@ -33,17 +31,15 @@ iso8601>=1.1.0
 jinja2-highlight>=0.6.1
 jinja2>=3.1.2
 jsonschema>=4.0.0
-lmdb>=1.4.0
+# fix for python 3.12 https://github.com/jnwatson/py-lmdb/pull/352
+lmdb @ git+https://github.com/Bye-lemon/py-lmdb.git@master#egg=lmdb
 MarkupSafe>=2.1.2
 mistune>=2.0.4
 morphys>=1.0
 netaddr>=0.8.0
 numpy>=1.24.1
-# python 3.10+ requires >=0.9.0 ("ImportError: cannot import name 'getargspec' from 'inspect'")
-# FIXME: eth-abi requires <0.10.0 (https://github.com/ethereum/eth-abi/pull/194)
 parsimonious>=0.9.0,<0.10.0
 passlib>=1.7.4
-# FIXME: twisted/http2 needs <2 => priority>=2.0.0
 priority>=1.3.0,<2.0
 prompt-toolkit>=3.0.36
 psutil>=5.9.4
@@ -86,3 +82,5 @@ wsaccel>=0.6.4; platform_python_implementation=='CPython'
 xbr>=21.2.1
 zlmdb>=23.1.1
 zope.interface>=5.5.2
+# python-snappy>0.6.1
+python-snappy @ git+https://github.com/andrix/python-snappy.git@master#egg=python-snappy
