--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -55,11 +55,10 @@ sortedcontainers==2.2.2
 treq==20.4.1
 Twisted==20.3.0
 txaio==20.4.1
-txtorcon==20.0.0
 u-msgpack-python==2.6.0
 ujson==3.0.0
 urllib3==1.24.3
-vmprof==0.4.15
+vmprof==0.4.15; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
 watchdog==0.10.3
 Werkzeug==1.0.1
 wsaccel==0.6.2
